Ajustes de Bugs em Ocorrência e Informativos
